<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Oppia</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="menu_home">Home</string>
  <string name="menu_options">Options</string>
  <string name="menu_my_downloads">My Downloads</string>
  <string name="menu_help">Help</string>
  <string name="menu_switch_profile">Switch Profile</string>
  <string name="administrator_controls">Administrator Controls</string>
  <string name="drawer_open_content_description">Navigation Menu Open</string>
  <string name="drawer_close_content_description">Navigation Menu Close</string>
  <string name="welcome_text">Welcome to Oppia!</string>
  <string name="welcome_back_text">Welcome back to Oppia!</string>
  <string name="audio_play_description">Play audio</string>
  <string name="audio_pause_description">Pause audio</string>
  <string name="audio_language_select_dialog_okay_button">OK</string>
  <string name="audio_language_select_dialog_cancel_button">Cancel</string>
  <string name="audio_language_select_dialog_title">Audio Language</string>
  <string name="audio_dialog_offline_title">Currently Offline</string>
  <string name="audio_dialog_offline_message">Make sure Wi-Fi or cellular data is turned on, then try again.</string>
  <string name="audio_dialog_offline_positive">OK</string>
  <string name="cellular_data_alert_dialog_okay_button">OK</string>
  <string name="cellular_data_alert_dialog_cancel_button">Cancel</string>
  <string name="cellular_data_alert_dialog_title">Currently on Cellular Data</string>
  <string name="cellular_data_alert_dialog_description">Streaming audio may use a lot of cellular data.</string>
  <string name="cellular_data_alert_dialog_checkbox">Don\'t show this message again</string>
  <string name="concept_card_toolbar_title">Concept Card</string>
  <string name="concept_card_close_icon_description">Clicking on this will close the concept card.</string>
  <string name="revision_card_toolbar_title">Revision Card</string>
  <string name="stop_exploration_dialog_title">Leave to Topic Page?</string>
...
  <string name="question_training_session_finished_header">Finished</string>
  <string name="question_training_session_finished_message">You have finished all of the questions! You can choose to play another set of questions, or return to the topic.</string>
  <string name="status_in_progress">In Progress</string>
  <string name="status_completed">Completed</string>
  <string name="show_hide_chapter_list">Show/Hide chapter list of %s</string>
  <string name="play_pause_audio">Play/Pause Audio</string>
  <string name="help">Help</string>
  <string name="preferences">Preferences</string>
  <string name="search">Search</string>
  <string name="fraction_error_invalid_chars">Please only use numerical digits, spaces or forward slashes (/)</string>
  <string name="fraction_error_invalid_format">Please enter a valid fraction (e.g., 5/3 or 1 2/3)</string>
  <string name="fraction_error_divide_by_zero">Please do not put 0 in the denominator</string>
  <string name="fraction_error_larger_than_seven_digits">None of the numbers in the fraction should have more than 7 digits.</string>
...
