...
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:id="@+id/exploration_toolbar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
...
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

          <ImageView
            android:id="@+id/action_audio_player"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:scaleType="center"
            android:src="@{viewModel.isAudioStreamingOn ? @drawable/ic_audio_streaming_on_24dp :  @drawable/ic_audio_streaming_off_24dp}"
            android:visibility="@{viewModel.showAudioButton ? View.VISIBLE : View.GONE}" />
...
