...
    android:elevation="8dp"
    android:gravity="center_vertical"
    android:minHeight="48dp"
    android:padding="4dp">

    <ImageView
      android:id="@+id/play_pause_audio_icon"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginStart="8dp"
      android:clickable="@{viewModel.playStatusLiveData != UiAudioPlayStatus.LOADING}"
      android:contentDescription="@{viewModel.playStatusLiveData == UiAudioPlayStatus.PLAYING ? @string/audio_pause_description : @string/audio_play_description}"
      android:onClick="@{(v) -> viewModel.togglePlayPause(viewModel.playStatusLiveData)}"
...
      android:progress="@{audioFragment.userIsSeeking ? audioFragment.userPosition : viewModel.positionLiveData}"
      android:progressDrawable="@drawable/audio_seekbar_background"
      android:splitTrack="false"
      android:thumb="@drawable/seekbar_thumb"
      android:thumbOffset="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/audio_language_icon"
      app:layout_constraintStart_toEndOf="@+id/play_pause_audio_icon"
      app:layout_constraintTop_toTopOf="parent" />

    <ImageView
      android:id="@+id/audio_language_icon"
      android:layout_width="wrap_content"
...
