<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingStart="@dimen/cellular_data_dialog_padding"
  android:paddingEnd="@dimen/cellular_data_dialog_padding">

  <CheckBox
    android:id="@+id/cellular_data_dialog_checkbox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="@dimen/cellular_data_dialog_padding"
    android:paddingBottom="@dimen/cellular_data_dialog_padding"
    android:text="@string/cellular_data_alert_dialog_checkbox"
    android:textColor="@color/black_54"
    android:textSize="16sp" />
</RelativeLayout>
